[[bin]]
name = "part1"
path = "src/part1/bin/main.rs"

[[bin]]
name = "part2"
path = "src/part2/bin/main.rs"

[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.2"
